--- a/style/style.css
+++ b/style/style.css
@@ -8,60 +8,73 @@
 header{
     background-color: #d0bd93;
     padding: 8px;
-    flex-direction: row;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     border-bottom: 2px #9f8c65 inset;
-
 }
+
 header img{
     width: 350px;
 }
 
-main{
-    background-image: url("./images/pexels-tina-nord-816377.jpg");
+/*main{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 800px;
-    z-index: -2;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-}
+}*/
 
-.header__nav ul{
-    background-color: black;
-    list-style-type: none;
-    color: white;
-    display: flex;
-    padding: 0;
-    margin: 0;
-}
-
-
-.header__nav ul li{
-    padding: 10px 0px;
+.nav{
     background-color: #d0bd93;
-   
+    height: 80px;
+}
+
+.nav__img{
+    width: 40px;
+}
+
+.nav__container{
+    display: flex;
+    height: 100%;
+    width: 90%;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #d0bd93;
 }
 
 
-a{
-    text-decoration: dashed;
-    color: black;
-    padding-left: 10px;
-    padding-right: 10px;
+.nav__label, .nav__input{
+    display: none;
 }
 
-a:hover {
-    background-color: #7a6b64;
-    color:white;
-    padding: 15px 15px;
-    transition: .1s;
-    border: 2px solid #555;
+.nav__menu{
+    display: grid;
+    grid-auto-flow: column;
+    gap: 3em;
+}
+
+.nav__item{
+    color: #000;
+    text-decoration: none;
+    --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
+}
+
+.nav__item::after{
+    content:"";
+    display: block;
+    background:#7a6b64;
+    width: 90%;
+    margin-top: 3px;
+    height: 3px;
+    clip-path: var(--clippy);
+    transition: clip-path .5s;
+}
+
+.nav__item:hover{
+    --clippy: polygon(0 0,100% 0, 100% 100%, 0 100%);
 }
 
 .main__div{
@@ -74,10 +87,8 @@ a:hover {
 
 .main__div__h1{
     padding: 15px;
-    background-color: #FFF8B4;
     border: #9f8c65 2px solid;
     opacity: .9;
-
 }
 
 .main__div__text{
@@ -101,8 +112,6 @@ a:hover {
     border: #9f8c65 2px solid;
     border-left: none;
     padding: 15px;
-
-
 }
 
 .main__div__text h1{
@@ -126,7 +135,7 @@ a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 300px;
+    height: 400px;
     width: 600px;
     padding: 40px;
     opacity: .9;
@@ -141,14 +150,25 @@ a:hover {
     padding: 30px;
     font-weight: bold;
 }
+.main__div__text__contact a{
+    padding-top: 10px;
+    font-weight: bold;
+}
 
-.main__div__text__user{
-    background-color: #FFF8B4;
+.login{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
+
+}
+
+.loginform{
+    background-color: #FFF8B4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     height: 300px;
     width: 600px;
     padding: 40px;
@@ -156,20 +176,17 @@ a:hover {
     border: 2px #9f8c65 solid ;
 }
 
+
 .main__div__text__user label{
     padding: 10px;
 }
 
 .main__div__text__user button{
-display: flex;
-margin: 15px;
-padding: 5px;
-flex-direction: row;
-align-items: center;
-justify-content: center;
-position: absolute;
-top: 230px;
-left: 290px;
+    margin: 15px;
+    padding: 5px;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 .main__div__text__user h1{
@@ -178,10 +195,10 @@ left: 290px;
 
 .main__div__text__user__back{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
-    height: 180px;
+    z-index: 2;
 }
 
 .main__div__textimg__1{
@@ -212,30 +229,6 @@ left: 290px;
     padding: 15px;
 }
 
-.main__div__textimg__2{
-    height: 400px;
-    padding: 40px;
-    border-right: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    opacity: .9;
-}
-
-.main__div__text__2{
-    background-color: #FFF8B4;
-    border: solid 2px #9f8c65;
-    height: 250px;
-    padding: 10px;
-    opacity: .9;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-right: none ;
-}
-
 .main__div__text__2 h2{
     padding: 15px;
 }
@@ -252,7 +245,7 @@ left: 290px;
     border: #9f8c65 solid 2px;
 }
 
-.main__div__img1 img{
+.main__div__img1{
     height: 240px;
     padding: 15px;
     background-color: #FFF8B4;
@@ -260,20 +253,6 @@ left: 290px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    opacity: .9;
-    border: 2px solid #9f8c65;
-    border-left: none;
-}
-
-.main__div__img2 img{
-    height: 240px;
-    padding: 15px;
-    background-color: #FFF8B4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    opacity: .9;
     border: 2px solid #9f8c65;
     border-left: none;
 }
@@ -285,10 +264,37 @@ footer{
     align-items: center;
     height: 50px;
     background-color:  #7a6b64;
-    
+    padding: 10px;
+    color: #000;    
 }
 
-footer p {
-    padding: 10px;
-    color: #000;
+@media (max-width: 700px){
+    .nav__label{
+        display: block;
+        cursor: pointer;
+    }
+
+    .nav__menu{
+        position:fixed;
+        top: 80px;
+        bottom: 0px;
+        background-color: #9f8c65;
+        width: 100%;
+        left: 0;
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: column;
+        align-items: center;
+        clip-path: circle(0 at center);
+        transition: clip-path 1s ease-in-out;
+    }
+
+    
+
+.nav__input:checked + .nav__menu{
+    background-color: #9f8c65;
+    clip-path: circle(100% at center);
 }
+}
+
+
