--- a/style/style.css
+++ b/style/style.css
@@ -6,8 +6,6 @@
 }
 
 header{
-    background-color: #d0bd93;
-    padding: 8px;
     border-bottom: 2px #9f8c65 inset;
 }
 
@@ -16,6 +14,7 @@ header img{
 }
 
 /*main{
+    background-image: url(../images/pexels-tina-nord-816377.jpgA);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -24,11 +23,21 @@ header img{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-}*/
+}
+*/
+
+section{
+    background: url(../images/pexels-tina-nord-816377\ \(1\).jpg) no-repeat center top fixed;
+    min-height: 100vh;
+    block-size: cover;
+}
+
+/*MENU RESPONSIVE*/
 
 .nav{
     background-color: #d0bd93;
     height: 80px;
+    z-index: 3;
 }
 
 .nav__img{
@@ -77,6 +86,9 @@ header img{
     --clippy: polygon(0 0,100% 0, 100% 100%, 0 100%);
 }
 
+/*FIN MENU RESPONSIVE*/
+
+
 .main__div{
     opacity: .9;
     display: flex;
@@ -85,10 +97,37 @@ header img{
     justify-content: center;
 }
 
+.main__div__textimg__1{
+    height: 400px;
+    padding: 40px;
+    border-right: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    opacity: .9;
+}
+
+.main__div__text__1{
+    background-color: #FFF8B4;
+    border: solid 2px #9f8c65;
+    height: 250px;
+    padding: 10px;
+    opacity: .9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-right: none ;
+}
+
+
 .main__div__h1{
-    padding: 15px;
     border: #9f8c65 2px solid;
     opacity: .9;
+    display: flex;
+    justify-content: center;
+    background-color: #FFF8B4;
 }
 
 .main__div__text{
@@ -114,14 +153,14 @@ header img{
     padding: 15px;
 }
 
-.main__div__text h1{
+/*.main__div__text h1{
     padding: 15px;
 }
 
 .main__div__text p{
     padding: 30px;
 }
-
+*/
 .main__div__contact{
     display: flex;
     justify-content: center;
@@ -155,6 +194,8 @@ header img{
     font-weight: bold;
 }
 
+
+/*FORMULARIO DE LOGIN*/
 .login{
     display: flex;
     flex-direction: column;
@@ -193,37 +234,16 @@ header img{
     padding-bottom: 80px;
 }
 
-.main__div__text__user__back{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    z-index: 2;
+.button-ctc{
+    text-decoration: none;
+    color: white;
+    border: #9f8c65 2px solid;
+    padding: 4px;
+    background-color: #7a6b64;
 }
 
-.main__div__textimg__1{
-    height: 400px;
-    padding: 40px;
-    border-right: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    opacity: .9;
-}
+/*FIN FORMULARIO LOGIN*/
 
-.main__div__text__1{
-    background-color: #FFF8B4;
-    border: solid 2px #9f8c65;
-    height: 250px;
-    padding: 10px;
-    opacity: .9;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-right: none ;
-}
 
 .main__div__text__1 h1{
     padding: 15px;
@@ -257,16 +277,65 @@ header img{
     border-left: none;
 }
 
-footer{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: center;
-    height: 50px;
-    background-color:  #7a6b64;
-    padding: 10px;
-    color: #000;    
+
+/*FOOTER*/
+.pie-pagina{
+    width: 100%;
+    background-color: #615651;
 }
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img{
+    width: 200px;
+}
+.pie-pagina .grupo-1 .box h2{
+    color: #000;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a{
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color: #3f3835;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover{
+    color: #9f8c65;
+}
+.pie-pagina .grupo-2{
+    background-color: #000;
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff;
+}
+.pie-pagina .grupo-2 small{
+    font-size: 15px;
+}
+/*FIN FOOTER*/
 
 @media (max-width: 700px){
     .nav__label{
@@ -278,7 +347,7 @@ footer{
         position:fixed;
         top: 80px;
         bottom: 0px;
-        background-color: #9f8c65;
+        background-color: #c0a97c;
         width: 100%;
         left: 0;
         display: flex;
@@ -287,14 +356,32 @@ footer{
         align-items: center;
         clip-path: circle(0 at center);
         transition: clip-path 1s ease-in-out;
+        z-index: 10;
+        border-top: #9f8c65;
     }
 
     
 
-.nav__input:checked + .nav__menu{
-    background-color: #9f8c65;
-    clip-path: circle(100% at center);
-}
+        .nav__input:checked + .nav__menu{
+        background-color: #c0a97c;
+        clip-path: circle(100% at center);
+    }
+
+        .main__div__h1{
+        border: #9f8c65 2px solid;
+        opacity: .9;
+    }
+
+    .main__div__textimg__1{
+        height: 400px;
+        padding: 40px;
+        border: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        opacity: .9;
+    }
 }
 
 
