--- a/style/style.css
+++ b/style/style.css
@@ -545,7 +545,6 @@ h3{
 
 
     .main__div__textimg__1{
-        height: 400px;
         width: 100%;
         padding: 40px;
         display: flex;
@@ -556,8 +555,7 @@ h3{
 
     .main__div__text__1{
         height: 900px;
-        background-color: #FFF8B4;
-        border: solid 2px #9f8c65;
+        border-right: solid 2px #9f8c65;
         border-bottom: none;
     }
 
@@ -565,10 +563,8 @@ h3{
     .main__div__img1{
         width: 100%;
         height: 450px;
-        padding: 15px;
         border-left: 2px solid #9f8c65;
         border-top: none;
-    
     }
 
 
