--- a/style/style.css
+++ b/style/style.css
@@ -1,66 +1,71 @@
 * {
     padding: 0;
     margin: 0;
-    font-family:'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
     list-style: none;
     font-size: 16px;
 }
 
-header{
-    border-bottom: 2px #9f8c65 inset;
+header {
+    border-bottom: 2px #000 solid;
 }
 
-header img{
+header img {
     width: 350px;
 }
 
-section{
-    background: url(../images/pexels-tina-nord-816377\ \(1\).jpg) no-repeat center top;
-    min-height: 100vh;
+main {
+
+    border-top: #3f3835 5px solid;
+    background-image: url(../assets/Wave.svg);
     background-size: cover;
+    height: 130vh;
+    background-color: #e9dab6;
 }
 
-button{
-    margin-top: 15px;
+
+
+span {
+    background-color: #888;
 }
 
-h1{
+h1 {
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+}
+
+h2 {
     font-size: 25px !important;
     text-align: center;
     font-weight: bold;
 }
 
-h2{
-    font-size: 25px !important;
-    text-align: center;
-    font-weight: bold;
-}
-
-h3{
-    font-size: 16px !important;
+h3 {
+    font-size: 16px;
     color: #333;
-    text-align: center;
 }
 
-.row{
-    --bs-gutter-x:0;
+
+.row {
+    --bs-gutter-x: 0;
 }
 
 
 /*MENU RESPONSIVE*/
 
-.nav{
+.nav {
     background-color: #d0bd93;
     height: 80px;
     z-index: 3;
     width: 100%;
 }
 
-.nav__img{
+.nav__img {
     width: 40px;
 }
 
-.nav__container{
+.nav__container {
     display: flex;
     height: 100%;
     width: 90%;
@@ -70,363 +75,158 @@ h3{
     background-color: #d0bd93;
 }
 
+.nav__logo{
+    box-shadow: #3f3835 3px 5px;
+    border: #000 2px solid;
+}
 
-.nav__label, .nav__input{
+.nav__label,
+.nav__input {
     display: none;
 }
 
-.nav__menu{
+.nav__menu {
     display: grid;
     grid-auto-flow: column;
-    gap: 3em;
+    gap: 2em;
 }
 
-.nav__item{
-    color: #000;
+.nav__item {
     text-decoration: none;
     --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
+    background-color: #FFF8B4;
+    color: #000;
+    height: 40px;
+    border: 2px solid #000;
+    padding: 3px;
+    box-shadow: #3f3835 3px 5px;
 }
 
-.nav__item::after{
-    content:"";
+.nav__item::after {
+    content: "";
     display: block;
-    background:#FFF8B4;
+    background: #FFF8B4;
     width: 90%;
     margin-top: 3px;
     height: 3px;
     clip-path: var(--clippy);
     transition: clip-path .5s;
+
 }
 
-.nav__item:hover{
-    --clippy: polygon(0 0,100% 0, 100% 100%, 0 100%);
+.nav__item:hover {
+    --clippy: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
-.nav__label{
-    display: block;
-    cursor: pointer;
-    }
 
-.nav__menu{
-    border-top: #FFF8B4 4px solid;
-    position:fixed;
-    top: 80px;
-    bottom: 0px;
-    background-color: #c0a97c;
-    width: 100%;
-    left: 0px;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;
-    clip-path: circle(0 at center);
-    transition: clip-path 1s ease-in-out;
-    z-index: 10;
-    }
-
-.nav__input:checked + .nav__menu{
-    background-color: #c0a97c;
-    clip-path: circle(100% at center);
-    }
 
 /*FIN MENU RESPONSIVE*/
 
-.divi {
-    background-color: #FFF8B4;
-    background-image: url(../images/fondo-main.jpg);
-    background-size: cover;
-    border: solid 5px #9f8c65;
-    height: 250px;
-    width: 300px;
-    opacity: .9;
+
+.centre {
+    min-height: 90vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: 500ms;
-    margin-top: 200px;
-    margin-left: 14%;
-  }
+    justify-content: space-around;
+    align-items: center;
+}
 
-.divi:hover{  
-    background-image: url(../images/fondo-main-hover.jpg);
+
+.main__layout {
+    display: flex;
     background-color: #FFF8B4;
-    height: 500px;
-    width: 600px;
-    margin-top: 50px;
-    text-align: center;
-    margin-left: -20%;
+    padding: 25px;
+    align-items: center;
+    box-shadow: 10px 15px #3f3835;
+    border: 2px solid #000;
 }
 
-
-.divi p {
-    visibility: hidden;
+.main__organization {
+    display: flex;
+    height: 300px;
+    align-items: center;
+    text-align: left;
+    padding: 30px;
+    justify-content: space-between;
 }
 
-.divi:hover > p {
-    visibility: visible;
+.carousel-item {
+    width: 450px;
 }
 
+.divi{
+    width: 550px;
+}
+
+.divi h1 {
+    text-align: left;
+    font-size: 40px;
+}
 
 .divi h3 {
-    visibility: visible;
+    font-size: 25px;
 }
 
-.divi:hover > h3{
-    visibility: hidden;
+.carousel {
+    border: 5px solid #3f3835;
+    margin: 10px;
 }
 
-
-
-.divi1 {
-    background-color: #FFF8B4;
-    background-size: cover;
-    border: solid 5px #9f8c65;
-    height: 250px;
-    width: 300px;
-    opacity: .9;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: 500ms;
-    margin-top: 200px;
-    margin-left: 8%;
-}
-
-.divi1:hover{
-    background-image: none;
-    background-color: #FFF8B4;
-    height: 500px;
-    width: 600px;
-    text-align: center;
-    margin-top: 50px;
-    margin-left: -20%;
-}
-
-.divi1 p {
-    visibility: hidden;
-}
-
-.divi1:hover > p {
-    visibility: visible;
-  }
-
-.divi2 {
-    background-color: #FFF8B4;
-    background: url(../images/pexels-anete-lusina-5240734.jpg) no-repeat center bottom ;
-    background-size: cover;
-    border: solid 5px #9f8c65;
-    height: 250px;
-    width: 300px;
-    opacity: .9;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: 500ms;
-    margin-top: 200px;
-    margin-left: 30% ;
-}
-
-.divi2:hover{
-    background-image: none;
-    background-color: #FFF8B4;
-    height: 500px;
-    width: 600px;
-    margin-top: 50px;
-    text-align: center;
-}
-
-.divi2 p {
-    visibility: hidden;
-}
-
-.divi2:hover > p {
-    visibility: visible;
-  }
-
-  
-.divi3 {
-    background-color: #FFF8B4;
-    background: url(../images/pexels-anete-lusina-5240734.jpg) no-repeat center bottom ;
-    background-size: cover;
-    border: solid 5px #9f8c65;
-    height: 250px;
-    width: 300px;
-    opacity: .9;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: 500ms;
-    margin-top: 200px;
-    margin-left: 30% ;
-}
-
-.divi3:hover{
-    background-image: none;
-    background-color: #FFF8B4;
-    height: 500px;
-    width: 600px;
-    text-align: center;
-    margin-top: 50px;
-    text-align: center;
-    margin-left: -100px;
-}
-
-.divi3 p {
-    visibility: hidden;
-}
-
-.divi3:hover > p {
-    visibility: visible;
-  }
-
-
-.bk-img{
-    background: url(../images/pexels-arina-krasnikova-6998275.jpg) no-repeat center center ;
-    background-size: cover;
-}
-
-.bk-img1{
-    background: url(../images/sanacion.png) no-repeat center center ;
-    background-size: cover;
-}
-
-.bk-img2{
-    background: url(../images/reconexion.png) no-repeat center center ;
-    background-size: cover;
-}
-
-.bk-img3{
-    
-    background: url(../images/pexels-anete-lusina-5240734.jpg) no-repeat center bottom ;
-    background-size: cover;
-}
-
-.transition__button1{
-    display: none;
-}
-
-.transition__button2{
-    display: none;
-}
-
-
-.main__div__text__contact{
-    background-color: #FFF8B4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 400px;
-    width: 600px;
-    padding: 40px;
-    opacity: .9;
-    border: 2px #9f8c65 solid ;
-    margin-left: -23%;
-    margin-top: 100px;
-}
-
-.main__div__text__user{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 400px;
-    width: 600px;
-    padding: 40px;
-    opacity: .9;
-    margin-left: -23%;
-    margin-top: 100px;
-}
-
-.main__div__text__contact h1{
-    margin: 50px;
-    margin-bottom: 30px;
-    font-weight: bold;
-}
-
-.main__div__text__contact p{
-    margin-bottom: 15px;
-    font-weight: bold;
-}
-.main__div__text__contact a{
-    padding-top: 10px;
-    font-weight: bold;
-}
-
-
-.main__div__img1{
-    height: 250px;
-    padding: 15px;
-    background-color: #FFF8B4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    opacity: .9;
-    border: 2px solid #9f8c65;
-    border-left: none;
-}
-
-
-.main__div__textimg__1{
-    height: 400px;
-    padding: 40px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    opacity: .9;
-}
-
-.main__div__text__1{
-    background-color: #FFF8B4;
-    border: solid 2px #9f8c65;
-    height: 250px;
+.masInfo {
     padding: 10px;
-    opacity: .9;
+    background-color: #3f3835;
+    color: #fff;
+    box-shadow: #333 3px 5px;
+    margin: 10px;
+}
+
+.masInfo:active {
+    background-color: #c4ac7e;
+    color: #000
+}
+
+
+/*INFORMACION*/
+
+.info {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-right: none ;
+    height: 350px;
+    width: 1000px;
+    background-color: #FFF8B4;
+    padding: 1rem;
+    border: 2px solid #000;    
+    box-shadow: 10px 15px #3f3835;
+    margin: 0 auto;
+    margin-top: 3rem;
 }
-
-.main__div__text__1 h1{
-    padding: 15px;
-}
-
+/*FIN INFORMACION*/
 
 /*FORMULARIO DE LOGIN*/
-.login{
+.login {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    margin:  auto;
+    width: 400px;
 
 }
 
-.loginform{
-    background-color: #FFF8B4;
+.loginform {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;  
+    align-items: center;  
     height: 300px;
-    padding: 70px;
+    width: 70%;
     opacity: .9;
-    border: 2px #9f8c65 solid ;
 }
 
-
-.button-ctc{
-    margin-top: 20px;
-    text-decoration: none;
-    color: white;
-    border: #9f8c65 2px solid;
-    padding: 4px;
-    background-color: #7a6b64;
-
+.buttons-ctc{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 2rem;
 }
+
 
 /*FIN FORMULARIO LOGIN*/
 
@@ -436,39 +236,45 @@ h3{
 
 /*FOOTER*/
 
-.pie-pagina{
+.pie-pagina {
     width: 100%;
     background-color: #615651;
 }
-.pie-pagina .grupo-1{
+
+.grupo-1 {
     width: 100%;
     max-width: 1200px;
     margin: auto;
-    display:grid;
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap:50px;
+    grid-gap: 50px;
     padding: 45px 0px;
 }
-.pie-pagina .grupo-1 .box figure{
+
+.box figure {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.pie-pagina .grupo-1 .box figure img{
+
+.box figure img {
     width: 300px;
 }
-.pie-pagina .grupo-1 .box h2{
+
+.box h2 {
     color: #fff;
     margin-bottom: 25px;
     font-size: 20px;
 }
-.pie-pagina .grupo-1 .box p{
+
+.box p {
     color: #efefef;
     margin-bottom: 10px;
 }
-.pie-pagina .grupo-1 .red-social a{
+
+.red-social a {
     display: inline-block;
     text-decoration: none;
     width: 45px;
@@ -479,161 +285,138 @@ h3{
     background-color: #3f3835;
     text-align: center;
     transition: all 300ms ease;
+    box-shadow: #000 3px 5px;
 }
-.pie-pagina .grupo-1 .red-social a:hover{
+
+.red-social a:hover {
     color: #9f8c65;
 }
-.pie-pagina .grupo-2{
+
+.grupo-2 {
     background-color: #000;
     padding: 15px 10px;
     text-align: center;
     color: #fff;
 }
-.pie-pagina .grupo-2 small{
+
+.grupo-2 small {
     font-size: 15px;
 }
+
 /*FIN FOOTER*/
 
-    @media (max-width: 700px){
+@media (max-width: 576px) {
 
-    .divi1 {
-        margin-left: 15%;
+    main {
+        height: auto;
     }
 
-    .divi2 {
-        margin-left: 14% ;
+    .nav__logo{
+        box-shadow: none;
+        border: none;
     }
 
-    .divi3 {
-        margin-left: 14% ;
-        margin-bottom: 15px;
+    /*INICIO*/
+
+    .divi h1 {
+        font-size: 25px;
     }
 
-    
-    .divi:hover{
-        background-image: none;
-        background-color: #FFF8B4;
-        height: 600px;
-        width: 90%;
-        margin-left:5% ;
-        }
-
-    .divi1:hover{
-        height: 600px;
-        width: 90%;
-        margin-left:5%;
-        }
-        
-
-    .divi2:hover{
-        height: 600px;
-        width: 90%;
-        margin-left:5%;
-    }
-    
-    
-    .divi3:hover{
-        height: 600px;
-        width: 90%;
-        margin-left:5%;
-        margin-bottom: 15px;
+    .divi h3 {
+        font-size: 18px;
     }
 
-    .loginform{
-        width: 90%;
-        }
-
-
-    .main__div__textimg__1{
+    .divi {
         width: 100%;
-        padding: 40px;
-        display: flex;
-        justify-content: flex-end;
+    }
+
+    .main__layout {
         flex-direction: column;
-        margin-top: 25%;
+        justify-content: space-between;
+        width: 90%;
+        height: 650px;
     }
 
-    .main__div__text__1{
-        height: 900px;
-        border-right: solid 2px #9f8c65;
-        border-bottom: none;
+    .main__organization {
+        flex-direction: column;
+        width: 90%;
+        padding: 5px;
     }
 
-    
-    .main__div__img1{
+    .carousel-item {
         width: 100%;
-        height: 450px;
-        border-left: 2px solid #9f8c65;
-        border-top: none;
+    }
+
+    .masInfo .margin {
+        margin: 10px;
+    }
+
+    /*fin inicio*/
+
+
+    /*INFORMACION*/
+
+    .info {
+        flex-direction: column;
+        height: auto;
+        width: 90%;
+        margin-bottom: 2rem;
+    }
+
+    .info__img {
+        height: 200px;
+        object-fit: cover;
+    }
+
+    /*FIN INFORMACION*/
+
+
+    .login {
+        width: 90%;
+    }
+
+    .height{
+        height: auto;
     }
 
 
-    .transition__button1{
-        display: flex;
-        align-items: center;
-        margin: 0;
-        margin-top: 30px;
-        padding: 10px;
-        color: white;
-        border: #9f8c65 2px solid;
-        background-color: #7a6b64;
+    /*Inicio Menu Resonsive*/
+    .nav__label {
+        display: block;
+        cursor: pointer;
     }
 
-/*INICIO INTENTO DE TRANSFORM*/
-
-    .transition{
+    .nav__menu {
+        border-top: #615651 4px solid;
+        position: fixed;
+        top: 80px;
+        bottom: 0px;
+        background-color: #e9dab6;
+        width: 100%;
+        left: 0px;
         display: flex;
+        justify-content: space-evenly;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        clip-path: circle(0 at center);
+        transition: clip-path .5s ease-in-out;
+        z-index: 10;
     }
 
-    .transition__button1:checked > .main__div__textimg__1 .transi{
-        visibility: visible;
+    .nav__input:checked+.nav__menu {
+        background-color: #e9dab6;
+        clip-path: circle(100% at center);
     }
 
-    .transition__button1:checked > .main__div__img1 .transi{
-        visibility: visible;
-    }
+    /*FIN MENU RESPONSIVE*/
 
-    .transition__button2:checked{
-        visibility: hidden;
-    }
-
-    .transition__button2{
-        visibility: hidden;
-    }
-
-    .main__div__textimg__1 .transi {
-        visibility: hidden;
-    }
-    
-    .main__div__img1 .transi{
-        visibility: hidden;
-    }
-
-    /*FIN INTENTO DE TRANSFORM*/
-    
-
-    .main__div__text__contact{
-        margin-left: 5%;
-        width: 90%;
-        text-align: center;
-    }
-
-    .main__div__text__user{
-        margin-left: 5%;
-        width: 90%;
-        text-align: center;
-        padding: 20px;
-    }
-
-    .pie-pagina .grupo-1{
+    /*FOoter*/
+    .grupo-1 {
         width: 90%;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 30px;
         padding: 35% 0px;
-        }
+    }
 
-    }        
-
+    /*Fin Footer*/
+}
